{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "93ea7213-e431-4b35-846f-0bf251c854d3",
            "actions": [
                {
                    "name": "Left Stick",
                    "type": "Value",
                    "id": "4bc70efc-1447-4a84-8360-a4cdbc623c67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Right Stick",
                    "type": "Value",
                    "id": "bf2637c3-8c02-4964-bb08-2d692dd243e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "31ae35bb-765e-4474-8092-d32a25e625f7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Stick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "05ca8fd6-61e6-46a2-a67d-e76bc9708a83",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Stick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "125748ea-0889-459d-b72c-c42e842ea7be",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Stick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cc2c3446-cacd-436e-af0f-7cadfec095aa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Stick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "675598de-424a-4541-96a2-6ea7a68954f0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Stick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "719ad53f-87bb-40cb-b05e-a392d4bba297",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32cbe835-15eb-4d12-a5fb-8af81493e2c9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbdd6924-d0c0-4822-a6c6-2196345c06ee",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "c677d909-742b-41c9-8816-ca21899da168",
            "actions": [
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "0cb03d7d-2fbe-4555-99f6-2c300fb77492",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "db469594-0d46-4b14-b0f6-280ab9d7ddaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "fa1345a0-69ab-4cb8-ac38-d01b02b99cd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lock On",
                    "type": "Button",
                    "id": "67317a6f-8f6a-4872-b118-2017616622f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ultimate",
                    "type": "Button",
                    "id": "c9b86052-a08c-43b0-9a5f-6e1c2c35f4b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "14ef6eba-e11a-4b77-913d-1b8354bb8e30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swap Menu",
                    "type": "Value",
                    "id": "e97d2d16-5054-496e-81ff-6a209865608d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Light Attack",
                    "type": "Button",
                    "id": "633c81d8-9883-482e-b625-e3e772516d40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Heavy Attack",
                    "type": "Button",
                    "id": "75de8292-2823-4fe4-89d7-7aac021f5864",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swap Stance",
                    "type": "Value",
                    "id": "1aac6eed-0147-40e5-b2fd-2775e5c55c65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Consume Potion",
                    "type": "Button",
                    "id": "eddde8cb-3d32-4269-9505-bc7ec85d2d77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20ff7c76-dd34-4f4f-8fe1-f0be83da68ce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Light Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0103c3b7-3ad4-4b18-a823-7f8e745cd942",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Light Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25da4379-519d-416e-9f16-a6f6ce934328",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heavy Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c8e4ed1-66d2-457b-a0ff-b0394883a0d3",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heavy Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d186d9ce-50c4-44c4-9d0c-02ff26f2b39e",
                    "path": "1DAxis(minValue=0,whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume Potion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e2a419de-279e-443f-84b0-190e7390dfad",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume Potion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2c4c0c0a-7427-4d9a-8cca-41d3fb8c4b27",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume Potion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "17209e9c-a74a-46d1-9684-20ee4a660389",
                    "path": "1DAxis(minValue=0,whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume Potion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "86a38343-e5a7-4913-967d-5f9a7f912cc3",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume Potion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8b4a2279-1393-49ba-b3b9-f42a341263f4",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Consume Potion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f35beef9-d048-44dd-9c4f-4670ec2b80e1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "485c84ab-4c47-4dbf-bde2-5c274ec574ef",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96e0ed73-b636-4768-8b32-69a688bf4a7a",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fea750d0-5786-4996-882d-6c9d3723cdbe",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf358fec-66da-4ae2-8d22-95a76ab329b3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb15c798-469c-48b6-80ed-a411cad6d646",
                    "path": "<Gamepad>/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49ff0107-5df9-4f04-a70b-04ebfd7989b2",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultimate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7d82ae6-80d5-414b-8cc4-b05f71f097f6",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultimate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e9dea88-2f21-45b6-af63-48b28b97003c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Stance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8217b91d-75bb-4f2f-809e-616c6b3b7360",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Stance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75df22c5-181f-4806-8eaf-8a933a6ba22b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09b461ec-ee69-4e79-bc31-f6e562f40bc8",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "79199a49-51d3-482a-b1ff-3ac36edd1daf",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Menu",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "855f9ca6-100f-40b4-8fbd-4cb07cd34453",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Menu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "34cc2b72-287e-46ca-8d04-14151cd1c3b2",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Menu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "7ae72292-9f55-4dd3-a13b-d9057715c7c9",
                    "path": "1DAxis(whichSideWins=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Menu",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aa825e0a-804e-4b1e-badf-002ad5e3b4c3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Menu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "344ef4b6-876f-4dd7-9c75-6338e04da294",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap Menu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7e926b72-3c47-4133-889c-e8e74a2beef2",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a662151-26e5-4f2f-8b07-ea1c23ecc4c2",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}